test_src/compiler_errors/types/auto/AutoError1.b
class AutoError1 {
    void test() {
        auto x;
        x = 1;
        println(x);
    }
}
